documentation of GEtUserProfile Created !
