# docs/swagger.json
@@ -34,7 +34,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/serializer.LoginRequest"
+                            "$ref": "#/definitions/GinChat_serializer.LoginRequest"
                         }
                     }
                 ],
@@ -42,13 +42,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serializer.Token"
+                            "$ref": "#/definitions/GinChat_serializer.Token"
                         }
                     },
                     "400": {
                         "description": "Object_Not_Found(6) | Token_Expired_Or_Invalid(2) | Name_Field_Required_For_Register(12) | We_Don't_Know_What_Happened(8) | MUST_NOT_AUTHENTICATED(1)",
                         "schema": {
-                            "$ref": "#/definitions/utils.ErrorResponse"
+                            "$ref": "#/definitions/GinChat_utils.ErrorResponse"
                         }
                     }
                 }
@@ -72,7 +72,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/serializer.RegisterRequest"
+                            "$ref": "#/definitions/GinChat_serializer.RegisterRequest"
                         }
                     }
                 ],
@@ -80,19 +80,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.RegisterResponse"
+                            "$ref": "#/definitions/GinChat_utils.RegisterResponse"
                         }
                     },
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/utils.RegisterResponse"
+                            "$ref": "#/definitions/GinChat_utils.RegisterResponse"
                         }
                     },
                     "400": {
                         "description": "Too_Many_Token_Request(7) | Token_Expired_Or_Invalid(2) | We_Don't_Know_What_Happened(8) | MUST_NOT_AUTHENTICATED(1)",
                         "schema": {
-                            "$ref": "#/definitions/utils.ErrorResponse"
+                            "$ref": "#/definitions/GinChat_utils.ErrorResponse"
                         }
                     }
                 }
@@ -115,13 +115,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serializer.Room"
+                            "$ref": "#/definitions/GinChat_serializer.Room"
                         }
                     },
                     "400": {
                         "description": "Token_Expired_Or_Invalid(2) | Object_Not_Found(6)",
                         "schema": {
-                            "$ref": "#/definitions/utils.ErrorResponse"
+                            "$ref": "#/definitions/GinChat_utils.ErrorResponse"
                         }
                     },
                     "401": {
@@ -147,19 +147,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serializer.APIUserPagination"
+                            "$ref": "#/definitions/GinChat_serializer.APIUserPagination"
                         }
                     },
                     "400": {
                         "description": "Token_Expired_Or_Invalid(2) | Bad_Format(5)",
                         "schema": {
-                            "$ref": "#/definitions/utils.ErrorResponse"
+                            "$ref": "#/definitions/GinChat_utils.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "We_Don't_Know_What_Happened(8)",
                         "schema": {
-                            "$ref": "#/definitions/utils.ErrorResponse"
+                            "$ref": "#/definitions/GinChat_utils.ErrorResponse"
                         }
                     }
                 }
@@ -185,7 +185,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/utils.DummyMakeGroupChat"
+                            "$ref": "#/definitions/GinChat_utils.DummyMakeGroupChat"
                         }
                     }
                 ],
@@ -196,13 +196,13 @@
                     "400": {
                         "description": "Token_Expired_Or_Invalid(2) | Object_Not_Found(6) | Bad_Format(5)",
                         "schema": {
-                            "$ref": "#/definitions/utils.ErrorResponse"
+                            "$ref": "#/definitions/GinChat_utils.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "We_Don't_Know_What_Happened(8)",
                         "schema": {
-                            "$ref": "#/definitions/utils.ErrorResponse"
+                            "$ref": "#/definitions/GinChat_utils.ErrorResponse"
                         }
                     }
                 }
@@ -228,7 +228,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/serializer.MakeNewChatRequest"
+                            "$ref": "#/definitions/GinChat_serializer.MakeNewChatRequest"
                         }
                     }
                 ],
@@ -236,13 +236,13 @@
                     "201": {
                         "description": "you're recipient going to receive the response from ws !",
                         "schema": {
-                            "$ref": "#/definitions/serializer.SendPvMessage"
+                            "$ref": "#/definitions/GinChat_serializer.SendPvMessage"
                         }
                     },
                     "400": {
                         "description": "Token_Expired_Or_Invalid(2) | Object_Not_Found(6) | Bad_Format(5) | We_Don't_Know_What_Happened(8)",
                         "schema": {
-                            "$ref": "#/definitions/utils.ErrorResponse"
+                            "$ref": "#/definitions/GinChat_utils.ErrorResponse"
                         }
                     }
                 }
@@ -268,7 +268,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/utils.DummyMessage"
+                            "$ref": "#/definitions/GinChat_utils.DummyMessage"
                         }
                     }
                 ],
@@ -276,11 +276,40 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serializer.SendPvMessage"
+                            "$ref": "#/definitions/GinChat_serializer.SendPvMessage"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/user//get-profile/:id/": {
+            "get": {
+                "description": "get authenticated user profile",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "get user profile",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.ProfileAPI"
+                        }
+                    },
+                    "400": {
+                        "description": "Object_Not_Found(6) | Bad_Format(5)",
+                        "schema": {
+                            "$ref": "#/definitions/GinChat_utils.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -305,7 +334,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/utils.DummyProfileUpdate"
+                            "$ref": "#/definitions/GinChat_utils.DummyProfileUpdate"
                         }
                     }
                 ],
@@ -313,19 +342,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/serializer.UpdatedProfile"
+                            "$ref": "#/definitions/GinChat_serializer.UpdatedProfile"
                         }
                     },
                     "400": {
                         "description": "Token_Expired_Or_Invalid(2) | Object_Not_Found(6) | Bad_Format(5) | User_Name_Is_Taken(11)",
                         "schema": {
-                            "$ref": "#/definitions/utils.ErrorResponse"
+                            "$ref": "#/definitions/GinChat_utils.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "We_Don't_Know_What_Happened(8)",
                         "schema": {
-                            "$ref": "#/definitions/utils.ErrorResponse"
+                            "$ref": "#/definitions/GinChat_utils.ErrorResponse"
                         }
                     }
                 }
@@ -333,7 +362,7 @@
         }
     },
     "definitions": {
-        "serializer.APIUserPagination": {
+        "GinChat_serializer.APIUserPagination": {
             "type": "object",
             "properties": {
                 "count": {
@@ -348,12 +377,12 @@
                 "results": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/serializer.UserInRoom"
+                        "$ref": "#/definitions/GinChat_serializer.UserInRoom"
                     }
                 }
             }
         },
-        "serializer.LoginRequest": {
+        "GinChat_serializer.LoginRequest": {
             "type": "object",
             "required": [
                 "phone_no",
@@ -371,7 +400,7 @@
                 }
             }
         },
-        "serializer.MakeNewChatRequest": {
+        "GinChat_serializer.MakeNewChatRequest": {
             "type": "object",
             "required": [
                 "content",
@@ -387,7 +416,7 @@
                 }
             }
         },
-        "serializer.RegisterRequest": {
+        "GinChat_serializer.RegisterRequest": {
             "type": "object",
             "required": [
                 "phone_no"
@@ -400,7 +429,7 @@
                 }
             }
         },
-        "serializer.Room": {
+        "GinChat_serializer.Room": {
             "type": "object",
             "properties": {
                 "avatar": {
@@ -421,12 +450,12 @@
                 "users": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/serializer.UserAPI"
+                        "$ref": "#/definitions/GinChat_serializer.UserAPI"
                     }
                 }
             }
         },
-        "serializer.SendPvMessage": {
+        "GinChat_serializer.SendPvMessage": {
             "type": "object",
             "required": [
                 "content",
@@ -447,7 +476,7 @@
                 }
             }
         },
-        "serializer.Token": {
+        "GinChat_serializer.Token": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -458,7 +487,7 @@
                 }
             }
         },
-        "serializer.UpdatedProfile": {
+        "GinChat_serializer.UpdatedProfile": {
             "type": "object",
             "properties": {
                 "avatar": {
@@ -475,7 +504,7 @@
                 }
             }
         },
-        "serializer.UserAPI": {
+        "GinChat_serializer.UserAPI": {
             "type": "object",
             "properties": {
                 "id": {
@@ -489,7 +518,7 @@
                 }
             }
         },
-        "serializer.UserInRoom": {
+        "GinChat_serializer.UserInRoom": {
             "type": "object",
             "properties": {
                 "avatar": {
@@ -512,7 +541,7 @@
                 }
             }
         },
-        "utils.DummyMakeGroupChat": {
+        "GinChat_utils.DummyMakeGroupChat": {
             "type": "object",
             "required": [
                 "name",
@@ -533,7 +562,7 @@
                 }
             }
         },
-        "utils.DummyMessage": {
+        "GinChat_utils.DummyMessage": {
             "type": "object",
             "required": [
                 "content",
@@ -552,7 +581,7 @@
                 }
             }
         },
-        "utils.DummyProfileUpdate": {
+        "GinChat_utils.DummyProfileUpdate": {
             "type": "object",
             "required": [
                 "name"
@@ -572,7 +601,7 @@
                 }
             }
         },
-        "utils.ErrorResponse": {
+        "GinChat_utils.ErrorResponse": {
             "type": "object",
             "properties": {
                 "detail": {
@@ -586,7 +615,7 @@
                 }
             }
         },
-        "utils.RegisterResponse": {
+        "GinChat_utils.RegisterResponse": {
             "type": "object",
             "properties": {
                 "detail": {
@@ -594,6 +623,20 @@
                 },
                 "isSignup": {
                     "type": "boolean"
+                }
+            }
+        },
+        "serializer.ProfileAPI": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         }
